elda-common (with no configs) now handles 404s with a 404.html error page and stylesheet. Currently if a config is installed (the usual case) this doesn't work. That's next on the list.

--- a/elda-common/src/main/webapp/_errors/404.html
+++ b/elda-common/src/main/webapp/_errors/404.html
@@ -1,14 +1,14 @@
 <html>
 <head>
-<title>Resource Not Found</title>
+<title>Not Found</title>
 
-<link rel="stylesheet" type="text/css" href="/elda-common/_errors/style.css" />
+<link type="text/css" href="_errors/style.css"	rel="stylesheet">
 
 </head>
 <body>
-<h1>Oops</h1>
+<h1>Not Found</h1>
 
-It's not here.
+That resource is not available.
 
 </body>
 <html>
