Changes to Elda's error reporting. In general Elda throws a limited variety of exceptions through RouterRestlet, expecting them to me managed by the container within which it sits. Specifically we design for Tomcat and have error-page declarations in the web.xml which map these exceptions to some default text with no details (hence not leaking details to a possible attacker).
Tomcat allows those default pages to be overridden by setting Context's
in the conf directories, allowing the error dsiaplyas to be styled as
appropriate to the application.

--- a/elda-common/src/main/webapp/_errors/403.html
+++ b/elda-common/src/main/webapp/_errors/403.html
@@ -1,14 +1,14 @@
 <html>
 <head>
-<title>bad request</title>
+<title>forbidden</title>
 
 <style> body { background-color: pink } </style>
 
 </head>
 <body>
-<h1>Bad request</h1>
+<h1>Forbidden</h1>
 
-Your request was ill-formed. 
+You're not allowed to access that resource.
 
 </body>
 <html>
