--- a/elda-common/src/main/webapp/_errors/500.html
+++ b/elda-common/src/main/webapp/_errors/500.html
@@ -1,12 +1,14 @@
 <html>
 <head>
-<title>Duke</title>
+<title>internal error</title>
+
+<style> body { background-color: pink } </style>
+
 </head>
 <body>
-<h1>Oops</h1>
+<h1>Internal error</h1>
 
-For security reasons, we cannot give you any helpful information about
-this internal error.
+Sorry, Elda couldn't handle that query. 
 
 </body>
 <html>
