--- a/elda-common/src/main/webapp/_errors/something.html
+++ b/elda-common/src/main/webapp/_errors/something.html
@@ -1,14 +1,14 @@
 <html>
 <head>
-<title>bad request</title>
+<title>something broke</title>
 
 <style> body { background-color: pink } </style>
 
 </head>
 <body>
-<h1>Bad request</h1>
+<h1>Sorry, there's a problem</h1>
 
-Your request was ill-formed. 
+Something broke. 
 
 </body>
 <html>
