Corrected closing tag for <html> in error pages.

--- a/elda-common/src/main/webapp/_errors/400.html
+++ b/elda-common/src/main/webapp/_errors/400.html
@@ -2,7 +2,9 @@
 <head>
 <title>bad request</title>
 
-<style> body { background-color: pink } </style>
+<!-- <style> body { background-color: pink } </style> -->
+
+<link href="/_errors/style.css" rel="stylesheet" type="text/css" /> 
 
 </head>
 <body>
@@ -11,4 +13,4 @@
 Your request was ill-formed. 
 
 </body>
-<html>
+</html>
