Put inline stuyle back in 400-error-page. Updated version tag.

--- a/elda-common/src/main/webapp/_errors/400.html
+++ b/elda-common/src/main/webapp/_errors/400.html
@@ -2,9 +2,7 @@
 <head>
 <title>bad request</title>
 
-<!-- <style> body { background-color: pink } </style> -->
-
-<link href="/_errors/style.css" rel="stylesheet" type="text/css" /> 
+<style> body { background-color: pink } </style>
 
 </head>
 <body>
