Applied error-pages fix to standalone.

--- a/elda-standalone/src/main/webapp/_errors/400.html
+++ b/elda-standalone/src/main/webapp/_errors/400.html
@@ -1,12 +1,14 @@
 <html>
 <head>
-<title>Duke</title>
+<title>bad request</title>
+
+<style> body { background-color: pink } </style>
+
 </head>
 <body>
-<h1>Oops</h1>
+<h1>Bad request</h1>
 
-For security reasons, we cannot give you any helpful information about
-this error.
+Your request was ill-formed. 
 
 </body>
-<html>
+</html>
