--- a/elda-standalone/src/main/webapp/_errors/403.html
+++ b/elda-standalone/src/main/webapp/_errors/403.html
@@ -1,14 +1,14 @@
 <html>
 <head>
-<title>internal error</title>
+<title>forbidden</title>
 
 <style> body { background-color: pink } </style>
 
 </head>
 <body>
-<h1>Internal error</h1>
+<h1>Forbidden</h1>
 
-Sorry, Elda couldn't handle that query. 
+You're not allowed to access that resource.
 
 </body>
 </html>
