--- a/elda-standalone/src/main/webapp/_errors/404.html
+++ b/elda-standalone/src/main/webapp/_errors/404.html
@@ -1,11 +1,14 @@
 <html>
 <head>
-<title>Duke</title>
+<title>Not Found</title>
+
+<style> body { background-color: pink } </style>
+
 </head>
 <body>
-<h1>Oops</h1>
+<h1>Not Found</h1>
 
-It's not here.
+That resource is not available.
 
 </body>
-<html>
+</html>
