--- a/elda-standalone/src/main/webapp/_errors/something.html
+++ b/elda-standalone/src/main/webapp/_errors/something.html
@@ -1,14 +1,14 @@
 <html>
 <head>
-<title>internal error</title>
+<title>something broke</title>
 
 <style> body { background-color: pink } </style>
 
 </head>
 <body>
-<h1>Internal error</h1>
+<h1>Sorry, there's a problem</h1>
 
-Sorry, Elda couldn't handle that query. 
+Something broke. 
 
 </body>
 </html>
