--- a/elda-standalone/src/main/webapp/index.html
+++ b/elda-standalone/src/main/webapp/index.html
@@ -1,18 +1,23 @@
 <html>
 <head>
 <title>Elda -- an implementation of the Linked Data API</title>
-<meta http-equiv="refresh" content="1;url=https://epimorphics.github.io/elda/current">
+<meta http-equiv="refresh" content="10;url=https://epimorphics.github.io/elda/current">
 </head>
 
 <body>
 <h1>Elda &mdash; an implementation of the Linked Data API</h1>
 
-<h2>Click the link for the documentation.</h2>
+<h2>Click the link for the documentation:</h2>
 
 <a href="https://epimorphics.github.io/elda/current">
     https://epimorphics.github.io/elda/current
 </a>
 
+<h2>Or this link for an example:</h2>
+
+<a href="http://localhost:8080/standalone/again/games">
+	/standalone/again/games
+</a>	
 
 </body>
 </html>
