--- a/elda-standalone/src/main/webapp/index.html
+++ b/elda-standalone/src/main/webapp/index.html
@@ -1,7 +1,12 @@
 <html>
 <head>
 <title>Elda -- an implementation of the Linked Data API</title>
-<meta http-equiv="refresh" content="10;url=https://epimorphics.github.io/elda/current">
+
+<link rel="stylesheet" href="/elda/css/main.css">
+<link rel="stylesheet" href="/standalone/velocity/css/bootstrap.min.css">
+<link rel="stylesheet" href="/standalone/velocity/css/bootstrap-theme.min.css">
+<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    
 </head>
 
 <body>
