--- a/elda-standalone/src/main/webapp/index.html
+++ b/elda-standalone/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>Elda -- an implementation of the Linked Data API</title>
 
-<link rel="stylesheet" href="/elda/css/main.css">
+<link rel="stylesheet" href="/standalone/velocity/css/main.css">
 <link rel="stylesheet" href="/standalone/velocity/css/bootstrap.min.css">
 <link rel="stylesheet" href="/standalone/velocity/css/bootstrap-theme.min.css">
 <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
