--- a/elda-common/root/index.html
+++ b/elda-common/root/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-<meta http-equiv="refresh" content="2;url=http://localhost:8080/elda/docs/E1.2.14-index.html"> 
+<meta http-equiv="refresh" content="60;url=http://localhost:8080/elda/docs/E1.2.14-index.html"> 
 </head>
 <body>
-    Transferring you to Elda ...
+    <!-- A --> Transferring you to Elda ...
 </body>
 </html>
 
