--- a/elda-standalone/ROOT/index.html
+++ b/elda-standalone/ROOT/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-<meta http-equiv="refresh" content="2;url=https://epimorphics.github.io/elda/current"> 
+<meta http-equiv="refresh" content="60;url=https://epimorphics.github.io/elda/current"> 
 </head>
 <body>
-	Transferring you to Elda ...
+	<!-- B --> Transferring you to Elda ...
 	<a href="https://epimorphics.github.io/elda/current">
 		https://epimorphics.github.io/elda/current
 	</a>
