Fixed a couple of XML syntax errors reported by Frederic (not locally detected).

--- a/elda-lda/src/main/resources/textlike/visualizationTemplate.html
+++ b/elda-lda/src/main/resources/textlike/visualizationTemplate.html
@@ -11,7 +11,7 @@
   <script type="text/javascript" src="/sdx-ui/lib/jquery-ui-1.7.2.custom.min.js"></script>
   <script type="text/javascript" src="/sdx-ui/lib/jquery.form.js"></script>
   <script type="text/javascript" src="/sdx-ui/lib/shotenjin.js"></script>
-  <script src="http://maps.google.com/maps?file=api&v=2&sensor=false&key=ABQIAAAANuNa1vpaq-Fl1rf2HPcy7RT2yXp_ZAY8_ufC3CFXhHIE1NvwkxTfTOjT114c5IljlFXRMXnXqC6dlQ" type="text/javascript"></script>
+  <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;sensor=false&amp;key=ABQIAAAANuNa1vpaq-Fl1rf2HPcy7RT2yXp_ZAY8_ufC3CFXhHIE1NvwkxTfTOjT114c5IljlFXRMXnXqC6dlQ" type="text/javascript"></script>
   <script type="text/javascript" src="/sdx-ui/scripts/sdxui-vis.js"></script>
   <script type="text/javascript" src="http://www.google.com/jsapi"></script>
   
